--- a/src/components/styles/Testimonials.css
+++ b/src/components/styles/Testimonials.css
@@ -1,7 +1,6 @@
 
 .fifth_body .container {
     background: #FFFFFF;
-    height: 70vh;
   }
   .fifth_body .container h2 {
     margin-top: 20px;
@@ -31,6 +30,7 @@
     background: #F8FAFC;
     border-radius: 3rem;
     height: 18rem;
+    margin-bottom: 80px;
   }
   .fifth_body .container .axc {
     width: 240px !important;
@@ -44,14 +44,14 @@
     top: 10rem;
     filter: drop-shadow(0px 16px 48px rgba(0, 0, 0, 0.1607843137));
   }
-  .fifth_body .container .arrow {
-    width: 5rem;
-    height: 5rem;
+ .fifth_body .container .arrow {
+    width: 4rem;
+    height: 4rem;
     background: #FFFFFF;
     text-align: center;
     border-radius: 50%;
     position: absolute;
-    right: -3rem;
+    right: -1rem;
     bottom: 4rem;
     filter: drop-shadow(0px 7px 17px rgba(0, 0, 0, 0.1607843137));
     cursor: pointer;
@@ -59,8 +59,8 @@
   .fifth_body .container .arrow i {
     font-size: 2rem;
     position: absolute;
-    top: 1.5rem;
-    left: 1.9rem;
+    top: 1.1rem;
+    left: 1.5rem;
   }
   .fifth_body .container .txt1 {
     position: absolute;
